--- a/hw1/index.html
+++ b/hw1/index.html
@@ -32,16 +32,11 @@
 
 		<br>
 
-		Link to webpage: (TODO) <a href="https://cs184.eecs.berkeley.edu/sp25">cs184.eecs.berkeley.edu/sp25</a>
+		Link to webpage: <a href="https://cal-cs184-student.github.io/hw-webpages-agathafels/hw1/index.html">https://cal-cs184-student.github.io/hw-webpages-agathafels/hw1/index.html</a>
 		
 		<br>
 
 		Link to GitHub repository: <a href="https://github.com/cal-cs184-student/hw1-rasterizer-jerjit">https://github.com/cal-cs184-student/hw1-rasterizer-jerjit</a>
-
-		<figure>
-			<img src="lion.jpg" alt="Lion" style="width:50%"/>
-			<figcaption>You can add images with captions!</figcaption>
-		</figure>
 
 		<!--
 		We've already added one heading per task, to make your write-up as navigable when grading. Please fit your write-up within these sections!
@@ -228,21 +223,63 @@
 
 
 		<h2>Task 6: "Level Sampling" with mipmaps for texture mapping</h2>
-		Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+		<p>Level sampling, or mipmapping, is an anti-aliasing technique used in texture mapping to prevent visual artifacts like shimmering when high-resolution textures are rendered on small or distant objects. When a pixel covers a large area of a texture, basic point-sampling skips over fine details. To fix this, we use a pre-computed sequence of progressively lower-resolution textures (mipmaps). Level sampling evaluates how fast the texture coordinates change across screen pixels to determine which mipmap level's resolution best matches the pixel's footprint, ensuring a smooth, pre-filtered color is applied.</p>
+		<p>We implemented this by calculating the texture coordinate gradients within the rasterization loop. For every pixel at (x, y), we calculated the barycentric coordinates and interpolated the UVs for that point, as well as for the adjacent pixels at (x+1, y) and (x, y+1). Passing these into Texture::get_level, we computed the difference vectors between them and scaled them by the full-resolution texture size. By taking the maximum length of these gradient vectors (let's call it L), the continuous mipmap level is calculated simply as log2(L), with appropriate clamping to prevent undefined math errors like log2(0) or out-of-bounds array access.</p>
+		<p>Finally, we updated the sampling logic to utilize this calculated level based on the user-selected mode. For L_ZERO, it ignores the calculation and samples directly from the base level. For L_NEAREST, it rounds the continuous level to the nearest integer and samples from that specific mipmap. For L_LINEAR (trilinear filtering), it identifies the two adjacent integer levels using floor and ceil, samples a color from both, and linearly interpolates between them based on the fractional weight of the computed level. This produces the smoothest visual transitions as objects scale in depth.</p>
+		<p>Looking at the following photos, the jellyfish photo displays the most dramatic difference when experimenting with Level sampling. Zero sampling on parts of the jellyfish result in “harsh” gradients, due to sampling from the original image directly, while Nearest sampling “averages” values in groups from a mipmap level that creates a softer “blur” effect in the image. </p>
+		<p>On the other hand, the grid pattern displays the most dramatic difference when experimenting with Pixel sampling. Nearest sampling results in “jaggy” edges where the lines curve, while Linear sampling softens the edges with a soft blur by averaging over UV coordinates, creating a smoother gradient</p>
+		<h3>Texture 1</h3>
+		<div style="display: flex; flex-direction: column; align-items: center;">
+			<table style="width: 100%; text-align: center; border-collapse: collapse;">
+				<tr>
+					<td style="padding: 10px;">
+						<img src="q6_l0_pliear.png" width="500px"/>
+						<figcaption>L_ZERO P_LINEAR</figcaption>
+					</td>
+					<td style="padding: 10px;">
+						<img src="q6_l0_pnear.png" width="500px"/>
+						<figcaption>L_ZERO P_NEAREST</figcaption>
+					</td>
+				</tr>
+				<tr>
+					<td style="padding: 10px;">
+						<img src="q6_lnear_plinear.png" width="500px"/>
+						<figcaption>L_NEAR P_LINEAR</figcaption>
+					</td>
+					<td style="padding: 10px;">
+						<img src="q6_lnear_pnear.png" width="500px"/>
+						<figcaption>L_NEAR P_NEAREST</figcaption>
+					</td>
+				</tr>
+			</table>
+		</div>
 
-		<h2>(Optional) Task 7: Extra Credit - Draw Something Creative!</h2>
-		Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+		<h3>Texture 2</h3>
+		<div style="display: flex; flex-direction: column; align-items: center;">
+			<table style="width: 100%; text-align: center; border-collapse: collapse;">
+				<tr>
+					<td style="padding: 10px;">
+						<img src="q6_2_l0_plinear.png" width="500px"/>
+						<figcaption>L_ZERO P_LINEAR</figcaption>
+					</td>
+					<td style="padding: 10px;">
+						<img src="q6_2_l0_pnear.png" width="500px"/>
+						<figcaption>L_ZERO P_NEAREST</figcaption>
+					</td>
+				</tr>
+				<tr>
+					<td style="padding: 10px;">
+						<img src="q6_2_lnear_plinear.png" width="500px"/>
+						<figcaption>L_NEAR P_LINEAR</figcaption>
+					</td>
+					<td style="padding: 10px;">
+						<img src="q6_2_lnear_pnear.png" width="500px"/>
+						<figcaption>L_NEAR P_NEAREST</figcaption>
+					</td>
+				</tr>
+			</table>
+		</div>
 
-		<h2>Additional Notes (please remove)</h2>
-		<ul>
-			<li>You can also add code if you'd like as so: <code>code code code</code></li>
-			<li>If you'd like to add math equations, 
-				<ul>
-					<li>You can write inline equations like so: \( a^2 + b^2 = c^2 \)</li>
-					<li>You can write display equations like so: \[ a^2 + b^2 = c^2 \]</li>
-				</ul>
-			</li>
-		</ul>
 		</div>
 	</body>
 </html>
